ajout) tester Vertx pour le serveur (support pour SockJS)