@@ -17,6 +17,9 @@ dependencies {
     implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.28.v20200408'
     implementation group: 'org.eclipse.jetty.websocket', name: 'websocket-server', version: '9.4.28.v20200408'
 
+    // TMP: vertx
+    implementation 'io.vertx:vertx-web:4.0.2'
+
     // jsoup HTML parser library @ https://jsoup.org/
     implementation 'org.jsoup:jsoup:1.13.1'
 
@@ -53,6 +56,15 @@ tasks.test{
 task server (type:JavaExec) {
     dependsOn 'classes'
     main = 'ca.aquiletour.server.JavaMainServer'
+    classpath = sourceSets.main.runtimeClasspath
+    //jvmArgs('-Dfile.encoding=UTF-8','-Xverify:none') // -Xverify:none for profiling in jvisualvm 
+    jvmArgs('-Dfile.encoding=UTF-8') 
+    standardInput = System.in
+}
+
+task vertx (type:JavaExec) {
+    dependsOn 'classes'
+    main = 'ca.aquiletour.server.vertx.VertxServer'
     classpath = sourceSets.main.runtimeClasspath
     //jvmArgs('-Dfile.encoding=UTF-8','-Xverify:none') // -Xverify:none for profiling in jvisualvm 
     jvmArgs('-Dfile.encoding=UTF-8') 
